--- a/clusters/my-cluster/charts/nginx/templates/deployment.yaml
+++ b/clusters/my-cluster/charts/nginx/templates/deployment.yaml
@@ -40,6 +40,12 @@ spec:
             - name: http
               containerPort: {{ .Values.service.port }}
               protocol: TCP
+          volumeMounts: html
+            mountPath: /usr/share/nginx/html
+        volumes:
+          - name: html
+            configMap:
+              name: {{ .Release.Name }}-index-html
           livenessProbe:
             {{- toYaml .Values.livenessProbe | nindent 12 }}
           readinessProbe:
