--- a/infrastructure/controllers/weave-gitops-dashboard.yaml
+++ b/infrastructure/controllers/weave-gitops-dashboard.yaml
@@ -39,6 +39,5 @@ spec:
       create: true
       passwordHash: $2a$10$jqOx/bMkRfKZvZiNFbcuFu/cOKWnqdOpOzLcDkS4DaJvMvPlJAT3a
       username: admin
-
-
-
+#gitops create dashboard ww-gitops --password=$PASSWORD --export > ./clusters/my-cluster/weave-gitops-dashboard.yaml
+#kubectl port-forward svc/ww-gitops-weave-gitops -n flux-system 9001:9001
