--- a/clusters/staging/infrastructure.yaml
+++ b/clusters/staging/infrastructure.yaml
@@ -5,7 +5,7 @@ metadata:
   namespace: flux-system
 spec:
   interval: 1h
-  retryInterval: 1m
+  retryInterval: 5m
   timeout: 5m
   sourceRef:
     kind: GitRepository
@@ -13,4 +13,12 @@ spec:
   path: ./infrastructure/controllers
   prune: true
   wait: true
+  patches:
+    - patch: |
+      - op: replace
+        path: /spec/values/ingress/hosts/0/host
+        value: "dashboard.staging"
+      target:
+        kind: HelmRelease
+        name: ww-gitops
   
