--- a/apps/production/kustomization.yaml
+++ b/apps/production/kustomization.yaml
@@ -2,6 +2,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 namespace: default
 resources:
-  -../base/apache
-  -../base/busybox
-  -../base/mysql
+resources:
+  - ../../base/apache
+  - ../../base/busybox
+  - ../../base/mysql
