--- a/apps/production/kustomization.yaml
+++ b/apps/production/kustomization.yaml
@@ -2,7 +2,6 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 namespace: default
 resources:
-resources:
-  - ../../base/apache
-  - ../../base/busybox
-  - ../../base/mysql
+  -../base/apache
+  -../base/busybox
+  -../base/mysql
