configures the ingress

--- a/infrastructure/controllers/weave-gitops-dashboard.yaml
+++ b/infrastructure/controllers/weave-gitops-dashboard.yaml
@@ -39,5 +39,12 @@ spec:
       create: true
       passwordHash: $2a$10$jqOx/bMkRfKZvZiNFbcuFu/cOKWnqdOpOzLcDkS4DaJvMvPlJAT3a
       username: admin
+    ingress:
+      enabled: true
+      hosts:
+        - host: ""
+          paths:
+            - path: "/"
+              pathType: Prefix
 #gitops create dashboard ww-gitops --password=$PASSWORD --export > ./clusters/my-cluster/weave-gitops-dashboard.yaml
 #kubectl port-forward svc/ww-gitops-weave-gitops -n flux-system 9001:9001
