configures the ingress

--- a/apps/production/kustomization.yaml
+++ b/apps/production/kustomization.yaml
@@ -5,3 +5,8 @@ resources:
   -../base/apache
   -../base/busybox
   -../base/mysql
+  -../base/podinfo
+patches:
+  - path: podinfo-patch.yaml
+    target:
+      kind: HelmRelease
